Fixed table text wrapping

--- a/sass/_theme_rst.sass
+++ b/sass/_theme_rst.sass
@@ -373,6 +373,11 @@
 .wy-table-backed
   background-color: $table-background-color
 
+.wy-table-responsive
+  p, td
+    white-space: normal !important
+    margin-bottom: 0 !important
+
 // Mobile specific
 +media($mobile)
   .rst-content
